# cim_emoji

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  test.yml
cim_emoji/: cim_emoji.py  helpers.py  setup.py
docs/: index.md  methods.md
methods/: index.html
search/: search_index.json
src/: cim_emoji.py  codes.json  exception.py  helpers.py  test_cim_emoji.py
tests/: test_cim_emoji.py
